# huggingface-aibom-generator

./: .gitignore  Cargo.toml  FEATURE_SHOWCASE.md  README.md  aibom.json
cli/: Cargo.toml
cli/src/: main.rs
lib/: Cargo.toml
lib/src/: component_generator.rs  generator.rs  lib.rs  license_handler.rs  model_analyzer.rs
lib/src/models/: aibom.rs  common.rs  component.rs  dependency.rs  metadata.rs  mod.rs  model_card.rs  model_info.rs
server/: Cargo.toml  README.md
server/src/: main.rs
