[package]
name = "lib"
version = "0.1.0"
edition = "2024"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hf-hub = "0.3"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4"] }
reqwest = { version = "0.11", features = ["json", "blocking"] }
spdx = "0.10"
